# ibmisc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.with_find  README.md  add_license.py  ibmisc-devel-GCC-4.9.3.eb
cmake/: FindGtest.cmake  FindNetCDF4_CXX.cmake  FindNumpy.cmake  setup_rpath.cmake
configme/: easybuild
notes/: JulianDatesG.html
pylib/: CMakeLists.txt  cblitz.pxd  cibmisc.pxd  cibmisc_cython.pxd  cython.cpp  env.in  examples.cpp  examples.hpp  ibmisc.pxd  ibmisc.pyx  ibmisc_cython.cpp  ibmisc_cython.hpp
pylib/tests/: test_cython.py  test_linear.py
slib/: CMakeLists.txt  Doxyfile.in  prettyprint.hpp  zstr.hpp
slib/b11/: array.hpp
slib/boost/: enum.hpp
slib/boost/enum/: base.hpp  bitfield.hpp  iterator.hpp  macros.hpp
slib/ibmisc/: CompactMap.hpp  ConstantSet.cpp  ConstantSet.hpp  DynArray.hpp  IndexSet.hpp  Proj.hpp  Proj2.cpp  Proj2.hpp  RTree.hpp  SegmentVector.hpp  Test.hpp  VarTransformer.cpp  VarTransformer.hpp  array.hpp  blitz.hpp  bundle.hpp  const.hpp  cython.hpp  cython_cpp.hpp  datetime.cpp  datetime.hpp  endian.cpp  endian.hpp  enum.hpp  error.cpp  error.hpp  f90blitz.hpp  f90blitz_f.f90  f90blitz_f.h  f90blitz_f.py  filesystem.cpp  filesystem.hpp  fortranio.cpp  fortranio.hpp  functional.hpp  geodesy.cpp  geodesy.hpp  hash.hpp  ibmisc.cpp  ibmisc.hpp  (+30 more)
slib/ibmisc/linear/: compressed.cpp  compressed.hpp  eigen.cpp  eigen.hpp  linear.cpp  linear.hpp  tuple.cpp  tuple.hpp
slib/ibmisc/lintransform/: compressed.cpp  compressed.hpp  eigen.cpp  eigen.hpp  lintransform.hpp
slib/spsparse/: SparseSet.hpp  VectorCooArray.hpp  accum.hpp  algorithm.hpp  array.hpp  blitz.hpp  eigen.hpp  multiply_dense.hpp  multiply_sparse.hpp  netcdf.hpp  next_noincr_body.hpp  runlength.hpp  sort.hpp  sparsearray.hpp  spsparse.cpp  spsparse.hpp  tuplelist.hpp  vector.hpp  xiter.hpp  zvector.hpp
test/: CMakeLists.txt  test_blitz.cpp  test_indexing.cpp  test_iter.cpp  test_ncutil.cpp  test_netcdf.cpp
tests/: CMakeLists.txt
tests/ibmisc/: help_fortranio.F90  test_blitz.cpp  test_bundle.cpp  test_compact_map.cpp  test_constant_set.cpp  test_datetime.cpp  test_filesystem.cpp  test_fortranio.cpp  test_indexing.cpp  test_iter.cpp  test_linear.cpp  test_memory.cpp  test_netcdf.cpp  test_permutation.cpp  test_runlength.cpp  test_string.cpp  test_var_transformer.cpp  test_zvector.cpp
tests/spsparse/: example_array.cpp  example_exception.cpp  test_array.cpp  test_multiply_sparse.cpp  test_netcdf.cpp  test_xiter.cpp  test_xiter.hpp
